<resources>
    <string name="app_name">MIVELOCIDAD</string>


    <string name="max_speed">Max Speed</string>
    <string name="average_speed">Average Speed</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="accuracy">Accuracy</string>
    <string name="satellite">Satellites</string>

    <string name="waiting_for_fix">Waiting for GPS fix …</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="please_enable_gps">In order to use this app you need the GPS to be enabled.</string>

    <string name="running">Route in process…</string>
    <string name="notification">Max Speed : %1$s, Distance : %2$s.</string>

    <string name="settings">Settings</string>
    <string name="app_info">About this app</string>
    <string name="pref_auto_average">Automatically detect stop time.</string>
    <string name="pref_auto_average_summary">The time spent at stop will not count in the average speed.</string>
    <string name="pref_miles_per_hour">Use miles per hour</string>
    <string name="pref_miles_per_hour_summary">Display the speed in mi/h instead of km/h</string>

    <string name="license">License</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Click in order to support my work :) …</string>
    <string name="source_code">GitHub</string>
    <string name="source_code_summary">Access to the source code.</string>
    <string name="version">Speedmeter Version</string>

    <string name="noti_id" translatable="false">Speedmeterisanid</string>
    <string name="github" translatable="false">https://github.com/flyingrub/SpeedMeter</string>
    <string name="license_type" translatable="false">GNU General Public License 2</string>
    <string name="doante_url" translatable="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DE8SFMJKRVK2</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="velocidad_maxima">Velocidad máxima</string>
    <string name="velocidad_minima">Velocidad minima</string>
    <string name="estado_parado">ESTADO PARADO</string>
    <string name="estado_caminando">ESTADO CAMINANDO</string>
    <string name="estado_marchando">ESTADO MARCHANDO</string>
    <string name="estado_corriendo">ESTADO CORRIENDO</string>
    <string name="bandas">BANDAS</string>
    <string name="estado_sprint">ESTADO SPRINT</string>
    <string name="estado_motor_terrestre">ESTADO VEH. MOTOR TERRESTRE</string>
    <string name="estado_aereo">ESTADO VEH. MOTOR AÉREO</string>
    <string name="dialog_title_default">Choose a value</string>
    <string name="dialog_save_button_text">Save</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrar">Registrar</string>
    <string name="registrarTitulo">Registro Usuario</string>
    <string name="titulo_Login">Logeo</string>

</resources>

