<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="dbuser"
            type="velo.uned.velocimetro.modelo.Users"
            />
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="velo.uned.velocimetro.diseño.Login">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>
    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:inputType="text"
        android:text="@{dbuser.user}"
        />
    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contra"
        android:inputType="textPassword"
        android:text="@{dbuser.pass}"
        />
    <Button
        android:id="@+id/btnLogeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:onClick="ingresar"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:layout_gravity="center"
        android:textSize="25sp"
        />


</LinearLayout>
</layout>